--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,79 +1,78 @@
 [window]
-opacity = 0.0
-
-# Dracula theme for Alacritty
-# https://draculatheme.com/alacritty
-#
-# Color palette
-# https://spec.draculatheme.com
-#
-# Instructions
-# https://github.com/alacritty/alacritty/blob/master/extra/man/alacritty.5.scd
+opacity = 0.75
 
 [colors.primary]
+background = '#000000' # base
+foreground = '#CDD6F4' # text
+# Bright and dim foreground colors
+dim_foreground = '#CDD6F4' # text
+bright_foreground = '#CDD6F4' # text
 
-background = "#282a36"
-foreground = "#f8f8f2"
-bright_foreground = "#ffffff"
-
+# Cursor colors
 [colors.cursor]
-
-text = "#282a36"
-cursor = "#f8f8f2"
+text = '#1E1E2E' # base
+cursor = '#F5E0DC' # rosewater
 
 [colors.vi_mode_cursor]
+text = '#1E1E2E' # base
+cursor = '#B4BEFE' # lavender
 
-text = "CellBackground"
-cursor = "CellForeground"
-
-[colors.selection]
-
-text = "CellForeground"
-background = "#44475a"
-
-[colors.normal]
-
-black = "#21222c"
-red = "#ff5555"
-green = "#50fa7b"
-yellow = "#f1fa8c"
-blue = "#bd93f9"
-magenta = "#ff79c6"
-cyan = "#8be9fd"
-white = "#f8f8f2"
-
-[colors.bright]
-
-black = "#6272a4"
-red = "#ff6e6e"
-green = "#69ff94"
-yellow = "#ffffa5"
-blue = "#d6acff"
-magenta = "#ff92df"
-cyan = "#a4ffff"
-white = "#ffffff"
-
+# Search colors
 [colors.search.matches]
-
-foreground = "#44475a"
-background = "#50fa7b"
+foreground = '#1E1E2E' # base
+background = '#A6ADC8' # subtext0
 
 [colors.search.focused_match]
-
-foreground = "#44475a"
-background = "#ffb86c"
+foreground = '#1E1E2E' # base
+background = '#A6E3A1' # green
 
 [colors.footer_bar]
+foreground = '#1E1E2E' # base
+background = '#A6ADC8' # subtext0
 
-background = "#282a36"
-foreground = "#f8f8f2"
-
+# Keyboard regex hints
 [colors.hints.start]
-
-foreground = "#282a36"
-background = "#f1fa8c"
+foreground = '#1E1E2E' # base
+background = '#F9E2AF' # yellow
 
 [colors.hints.end]
+foreground = '#1E1E2E' # base
+background = '#A6ADC8' # subtext0
 
-foreground = "#f1fa8c"
-background = "#282a36"
+# Selection colors
+[colors.selection]
+text = '#1E1E2E' # base
+background = '#F5E0DC' # rosewater
+
+# Normal colors
+[colors.normal]
+black = '#45475A' # surface1
+red = '#F38BA8' # red
+green = '#A6E3A1' # green
+yellow = '#F9E2AF' # yellow
+blue = '#89B4FA' # blue
+magenta = '#F5C2E7' # pink
+cyan = '#94E2D5' # teal
+white = '#BAC2DE' # subtext1
+
+# Bright colors
+[colors.bright]
+black = '#585B70' # surface2
+red = '#F38BA8' # red
+green = '#A6E3A1' # green
+yellow = '#F9E2AF' # yellow
+blue = '#89B4FA' # blue
+magenta = '#F5C2E7' # pink
+cyan = '#94E2D5' # teal
+white = '#A6ADC8' # subtext0
+
+# Dim colors
+[colors.dim]
+black = '#45475A' # surface1
+red = '#F38BA8' # red
+green = '#A6E3A1' # green
+yellow = '#F9E2AF' # yellow
+blue = '#89B4FA' # blue
+magenta = '#F5C2E7' # pink
+cyan = '#94E2D5' # teal
+white = '#BAC2DE' # subtext1
