--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -44,8 +44,8 @@ exec --no-startup-id nm-applet
 floating_modifier $mod
 
 # start a terminal
-# bindsym $mod+Return exec alacritty
-bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -185,7 +185,7 @@ bar {
         status_command i3status
 }
 
-exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/anime-girl-in-mountains-lake.jpg
+exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/in-the-rain.png
 
 # start picom
 exec --no-startup-id picom -CGb
