i dont even remember what i changed

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,3 +24,4 @@ bind -r l select-pane -R
 
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
+bind-key -r H run-shell "tmux-sessionizer ~/projects/web-for-dc/"
