--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -185,7 +185,7 @@ bar {
         status_command i3status
 }
 
-exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/butterfly.jpg
+exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/in-the-rain.png
 # start picom
 exec --no-startup-id picom -CGb
 
