--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -185,7 +185,7 @@ bar {
         status_command i3status
 }
 
-exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/in-the-rain.png
+exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/arcane-jinx-2.jpg
 # start picom
 exec --no-startup-id picom -CGb
 
@@ -211,5 +211,6 @@ bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewi
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 # Set keyboard layouts
-exec_always  --no-startup-id setxkbmap -layout prog-qwerty,ru
-exec_always  --no-startup-id "setxkbmap -option 'grp:win_space_toggle'"
+exec_always --no-startup-id setxkbmap -layout prog-qwerty,ru
+exec_always --no-startup-id setxkbmap -option 'grp:win_space_toggle'
+exec_always --no-startup-id setxkbmap -option 'caps:ctrl_modifier' && xcape -e 'Caps_Lock=Escape'
