switch from lsp-zero, add picom config, add vimtex, some more

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -185,9 +185,9 @@ bar {
         status_command i3status
 }
 
-exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/arcane-jinx-2.jpg
+exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/arcane-jinx-4.jpg
 # start picom
-exec --no-startup-id picom -CGb
+exec --no-startup-id picom -b
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -210,7 +210,7 @@ bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t ima
 bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
-# Set keyboard layouts
+# Set keyboard layouts and tap hold remap for capslock
 exec_always --no-startup-id setxkbmap -layout prog-qwerty,ru
 exec_always --no-startup-id setxkbmap -option 'grp:win_space_toggle'
 exec_always --no-startup-id setxkbmap -option 'caps:ctrl_modifier' && xcape -e 'Caps_Lock=Escape'
