--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -51,9 +51,10 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+#bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+#bindsym $mod+d exec "rofi -combi-modi window,drun -show combi"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -185,7 +186,7 @@ bar {
         status_command i3status
 }
 
-exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/ai_looking.jpg
+exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/arcane-jinx-2.jpg
 # start picom
 exec --no-startup-id picom -b
 
