add polybar changes in some configs

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -2,7 +2,7 @@ backend = "glx"
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
-#blur-background = true;
-#
-#blur-method = "dual_kawase";
-#blur-strenght = 6;
+blur-background = true;
+
+blur-method = "dual_kawase";
+blur-strenght = 6;
