--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -53,8 +53,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-#bindsym $mod+d exec "rofi -combi-modi window,drun -show combi"
+#bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindsym $mod+d exec --no-startup-id "rofi -combi-modi window,drun -show combi"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -182,11 +182,13 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#         status_command i3status
+# }
 
-exec_always --no-startup-id feh --bg-scale ~/.local/share/anime/arcane-jinx-2.jpg
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
+exec_always --no-startup-id feh --bg-scale ~/.local/share/backgrounds/tokyonight.png
 # start picom
 exec --no-startup-id picom -b
 
