--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,3 +25,14 @@ bind -r l select-pane -R
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
 bind-key -r H run-shell "tmux-sessionizer ~/projects/web-for-dc/"
+
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin "janoamaral/tokyo-night-tmux"
+
+run '~/.tmux/plugins/tpm/tpm'
