--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -54,7 +54,8 @@ bindsym $mod+Shift+q kill
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 #bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-bindsym $mod+d exec --no-startup-id "rofi -combi-modi window,drun -show combi"
+bindsym $mod+d exec --no-startup-id "rofi -modi drun,run -show drun"
+#bindsym $mod+d exec --no-startup-id "rofi -combi-modi window,drun -show combi"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
