--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -50,14 +50,14 @@ padding-right = 0
 
 module-margin = 1
 
-separator =
-separator-foreground = ${colors.disabled}
+separator = " "
+separator-foreground = ${colors.cyan}
 
 font-0 = "JetBrainsMono Nerd Font:size=9;2"
 font-1 = "JetBrainsMono Nerd Font:size=9;2"
 
 modules-left = xworkspaces
-modules-right = pulseaudio xkeyboard memory cpu date tray
+modules-right = pulseaudio memory cpu date battery tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -142,7 +142,7 @@ format-prefix-foreground = ${colors.cyan}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "󰍛 "
+format-prefix = " "
 format-prefix-foreground = ${colors.cyan}
 format-foreground = ${colors.foreground}
 label = %percentage_used:2%%
@@ -150,7 +150,7 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.cyan}
 format-foreground = ${colors.foreground}
 label = %percentage:2%%
@@ -183,6 +183,18 @@ label = %date%
 label-foreground = ${color.foreground}
 format-prefix = "󱑀 "
 format-prefix-foreground = ${colors.cyan}
+
+[module/battery]
+type = internal/battery
+full-at = 95
+
+format-full-prefix = "󱟢 "
+format-full-foreground = ${colors.cyan}
+format-charging-prefix = "󰂉 "
+format-charging-foreground = ${colors.cyan}
+format-discharging-prefix = "󰁿 "
+format-discharging-foreground = ${colors.cyan}
+
 
 [module/tray]
 type = internal/tray
