changing something again

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -2,7 +2,12 @@ backend = "glx"
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
-blur-background = true;
+#blur-background = true;
+#
+#blur-method = "dual_kawase";
+#blur-strenght = 4;
 
-blur-method = "dual_kawase";
-blur-strenght = 6;
+#Fading
+#fading = true;
+#fade_delta = 1;
+#no-fading-open-close = false;
