--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,5 +1,7 @@
 import = [
     "~/.config/alacritty/themes/tokyo-night.toml"
+    #"~/.config/alacritty/themes/rose_pine.toml"
+    #"~/.config/alacritty/themes/rose_pine_moon.toml"
     #"~/.config/alacritty/themes/tokyo-night-storm.toml"
     #"~/.config/alacritty/themes/dracula.toml"
     #"~/.config/alacritty/themes/ayu_dark.toml"
@@ -7,7 +9,7 @@ import = [
 ]
 
 [window]
-opacity = 0.70
+opacity = 0.75
 
 [font]
 size = 9.5
