--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -32,8 +32,10 @@ white = #787c99
 
 [bar/bar1]
 width = 100%
-height = 20pt
+height = 18pt
 radius = 0
+
+bottom = true
 
 ; dpi = 96
 
@@ -57,6 +59,7 @@ font-0 = "JetBrainsMono Nerd Font:size=9;2"
 font-1 = "JetBrainsMono Nerd Font:size=9;2"
 
 modules-left = xworkspaces
+modules-center = xwindow
 modules-right = pulseaudio memory cpu date battery tray
 
 cursor-click = pointer
@@ -64,11 +67,11 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
+; override-redirect = true
+; wm-restack = i3
 ; wm-restack = generic
 ; wm-restack = bspwm
 
-; wm-restack = i3
-; override-redirect = true
 
 [module/systray]
 type = internal/tray
