--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -2,10 +2,10 @@ backend = "glx"
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
-#blur-background = true;
-#
-#blur-method = "dual_kawase";
-#blur-strenght = 4;
+blur-background = true;
+
+blur-method = "dual_kawase";
+blur-strenght = 4;
 
 #Fading
 #fading = true;
