--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -45,7 +45,7 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec ghostty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -189,7 +189,7 @@ bindsym $mod+r mode "resize"
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-exec_always --no-startup-id feh --bg-max ~/.local/share/anime/arcane-jinx-5.jpg
+exec_always --no-startup-id feh --bg-max ~/.local/share/backgrounds/tokyonight.png
 # start picom
 exec --no-startup-id picom -b
 
