--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,11 @@
 theme = tokyonight
-font-family = "JetBrainsMono Nerd Font"
-background-opacity = 0.7
+background = #000000
+background-opacity = 0.60
+font-family = JetBrainsMono Nerd Font
+
 shell-integration-features = no-cursor,title
+cursor-style-blink = false
+
 window-decoration = false
+
+confirm-close-surface = false
