--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -2,12 +2,56 @@ backend = "glx"
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
-blur-background = true;
+rounded-corners = true;
+corner-radius = 12;
+
+rounded-corners-exclude = [
+  "class_g = 'i3-frame'",
+  "class_g = 'Polybar'",
+  "class_g = 'Rofi'",
+  "name = 'Notification'",
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
 
 blur-method = "dual_kawase";
-blur-strenght = 6;
+blur-background = true;
+blur-strenght = 5;
+blur-size = 12;
+blur-background-frame = false;
 
-#Fading
-#fading = true;
-#fade_delta = 1;
-#no-fading-open-close = false;
+blur-background-exclude = [
+  "window_type = 'Polybar'",
+  "window_type = 'desktop'",
+  "window_type = 'dock'",
+  "role = 'xborder'",
+  "class_g = 'Conky'",
+  "name = 'Notification'",
+  "_GTK_FRAME_EXTENTS"
+];
+
+# Fading
+# fading = true;
+# fade_delta = 1;
+# fade-in-step = 0.02;
+# fade-out-step = 0.02;
+# no-fading-open-close = true;
+
+# Opacity
+inactive-opacity = 0.9;
+active-opacity = 1;
+
+# Shadows
+shadow = true;
+shadow-radius = 10;
+shadow-opacity = .6;
+shadow-offset-x = -8;
+shadow-color = "#111111";
+
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
