--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -45,21 +45,20 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 border-size = 0pt
-border-color = #00000000
+border-color = ${colors.background}
 
 padding-left = 0
 padding-right = 0
 
 module-margin = 1
 
-separator = " "
-separator-foreground = ${colors.cyan}
+separator = |
+separator-foreground = ${colors.black}
 
 font-0 = "JetBrainsMono Nerd Font:size=9;2"
 font-1 = "JetBrainsMono Nerd Font:size=9;2"
 
 modules-left = xworkspaces
-modules-center = xwindow
 modules-right = pulseaudio memory cpu date battery tray
 
 cursor-click = pointer
@@ -146,7 +145,7 @@ format-prefix-foreground = ${colors.cyan}
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.cyan}
+format-prefix-foreground = ${colors.yellow}
 format-foreground = ${colors.foreground}
 label = %percentage_used:2%%
 
@@ -154,7 +153,7 @@ label = %percentage_used:2%%
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.cyan}
+format-prefix-foreground = ${colors.green}
 format-foreground = ${colors.foreground}
 label = %percentage:2%%
 
@@ -185,25 +184,25 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
 label-foreground = ${color.foreground}
 format-prefix = "󱑀 "
-format-prefix-foreground = ${colors.cyan}
+format-prefix-foreground = ${colors.blue}
 
 [module/battery]
 type = internal/battery
 full-at = 95
 
 format-full-prefix = "󱟢 "
-format-full-foreground = ${colors.cyan}
+format-full-foreground = ${colors.magenta}
 format-charging-prefix = "󰂉 "
-format-charging-foreground = ${colors.cyan}
+format-charging-foreground = ${colors.magenta}
 format-discharging-prefix = "󰁿 "
-format-discharging-foreground = ${colors.cyan}
+format-discharging-foreground = ${colors.magenta}
 
 
 [module/tray]
 type = internal/tray
 format-padding = 1
 tray-spacing = 10px
-tray-foreground = ${colors.primary}
+tray-foreground = ${colors.foreground}
 
 [settings]
 screenchange-reload = true
