trying out sway. chages to rofi

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -53,7 +53,7 @@ padding-right = 0
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.black}
+separator-foreground = ${colors.cyan}
 
 font-0 = "JetBrainsMono Nerd Font:size=9;2"
 font-1 = "JetBrainsMono Nerd Font:size=9;2"
