--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -15,29 +15,12 @@ set $mod Mod1
 # is used in the bar {} block below.
 font pango:JetBrainsMono Nerd Font 8
 
-# Turn off boarders
-# for_window [class="^.*"] border pixel 0
-                          # class                 border  backgr. text    indicator child_border
-for_window [class="^.*"] client.focused          #7aa2f7 #285577 #ffffff #2e9ef4   #285577
-
-default_border pixel 0
-
-default_floating_border pixel 0
-
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
-exec --no-startup-id dex --autostart --environment i3
-
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i ~/.local/share/anime/in-the-rain.png
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -90,10 +73,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+z split h
+bindsym $mod+z splith
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+v splitv
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -129,35 +112,33 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+plus workspace number $ws1
+bindsym $mod+bracketleft workspace number $ws2
+bindsym $mod+braceleft workspace number $ws3
+bindsym $mod+parenleft workspace number $ws4
+bindsym $mod+ampersand workspace number $ws5
+bindsym $mod+equal workspace number $ws6
+bindsym $mod+parenright workspace number $ws7
+bindsym $mod+braceright workspace number $ws8
+bindsym $mod+bracketright workspace number $ws9
+bindsym $mod+asterisk workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+plus move container to workspace number $ws1
+bindsym $mod+Shift+bracketleft move container to workspace number $ws2
+bindsym $mod+Shift+braceleft move container to workspace number $ws3
+bindsym $mod+Shift+parenleft move container to workspace number $ws4
+bindsym $mod+Shift+ampersand move container to workspace number $ws5
+bindsym $mod+Shift+equal move container to workspace number $ws6
+bindsym $mod+Shift+parenright move container to workspace number $ws7
+bindsym $mod+Shift+braceright move container to workspace number $ws8
+bindsym $mod+Shift+bracketright move container to workspace number $ws9
+bindsym $mod+Shift+asterisk move container to workspace number $ws10
 
 # reload the uration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# Exit sway (logs you out of your Wayland session)
+bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -188,28 +169,17 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#         status_command i3status
-# }
+ bar {
+    swaybar_command waybar
+ }
 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-exec_always --no-startup-id feh --bg-max ~/.local/share/anime/tokyonight-girl.jpg
-# start picom
-exec --no-startup-id picom -b
-
-# Adding borders to windows
-exec --no-startup-id $HOME/personal/xborder/xborders -c $HOME/.config/xborders/config.json --disable-version-warning
-
-# start autotiling
-exec --no-startup-id $HOME/personal/autotiling/autotiling
+output * bg ~/.local/share/anime/tokyonight-girl.jpg fill
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Use brightnessctl to adjust brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +20%
@@ -228,3 +198,22 @@ bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection c
 # gaps
 gaps inner 10px
 gaps outer 5px
+
+default_border pixel 2
+default_floating_border pixel 2
+
+# Turn off boarders
+# for_window [class="^.*"] border pixel 0
+
+# class                 border  backgr. text    indicator child_border
+client.focused          #7aa2f7 #285577 #ffffff #2e9ef4   #285577
+
+exec_always caps2esc -m 1
+
+input type:keyboard {
+  xkb_layout "prog-qwerty,ru"
+  xkb_options "grp:win_space_toggle"
+  xkb_options "caps:ctrl_modifier"
+}
+
+include /etc/sway/config.d/*
