--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -2,6 +2,8 @@ backend = "glx"
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
+vsync = true;
+
 rounded-corners = true;
 corner-radius = 12;
 
