--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod1
+set $term ghostty
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -32,7 +33,9 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec ghostty
+# ok, wtf sway? why are you making me do that?
+# why does i need to specify full path? I have it in my $PATH
+bindsym $mod+Return exec ~/.local/bin/ghostty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -111,6 +114,9 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+
+# i use custom symbols layout on my keyboard,
+# so there are some weird stuff going on
 # switch to workspace
 bindsym $mod+plus workspace number $ws1
 bindsym $mod+bracketleft workspace number $ws2
@@ -135,7 +141,7 @@ bindsym $mod+Shift+braceright move container to workspace number $ws8
 bindsym $mod+Shift+bracketright move container to workspace number $ws9
 bindsym $mod+Shift+asterisk move container to workspace number $ws10
 
-# reload the uration file
+# reload the configuration file
 bindsym $mod+Shift+c reload
 # Exit sway (logs you out of your Wayland session)
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
@@ -167,11 +173,10 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
- bar {
-    swaybar_command waybar
- }
+# start waybar
+bar {
+     swaybar_command waybar
+}
 
 output * bg ~/.local/share/anime/tokyonight-girl.jpg fill
 
@@ -185,6 +190,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +20%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 20%-
 
+# will i need to redo screenshots configuration on wayland?
 # Screenshots
 bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date +%d-%m-%y).png"
 bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date +%d-%m-%y).png"
@@ -202,18 +208,21 @@ gaps outer 5px
 default_border pixel 2
 default_floating_border pixel 2
 
-# Turn off boarders
-# for_window [class="^.*"] border pixel 0
+#                   title-border    title-background   title-text   indicator     focused-border
+client.focused      #4c7899         #285577            #ffffff      #f7768e       #bb9af7
 
-# class                 border  backgr. text    indicator child_border
-client.focused          #7aa2f7 #285577 #ffffff #2e9ef4   #285577
-
-exec_always caps2esc -m 1
-
+# set up keyboard
+# need to think how i wanna do tap-hold caps -> esc - ctrl
+# kanata maybe?
 input type:keyboard {
   xkb_layout "prog-qwerty,ru"
   xkb_options "grp:win_space_toggle"
   xkb_options "caps:ctrl_modifier"
+}
+
+input type:touchpad {
+    tap enabled
+    dwt enabled
 }
 
 include /etc/sway/config.d/*
