--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -40,8 +40,8 @@ blur-background-exclude = [
 # no-fading-open-close = true;
 
 # Opacity
-inactive-opacity = 0.9;
-active-opacity = 1;
+# inactive-opacity = 0.9;
+# active-opacity = 1;
 
 # Shadows
 shadow = true;
