--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -2,10 +2,10 @@ backend = "glx"
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
-vsync = true;
+#vsync = true;
 
 rounded-corners = true;
-corner-radius = 12;
+corner-radius = 10;
 
 rounded-corners-exclude = [
   "class_g = 'i3-frame'",
@@ -33,30 +33,30 @@ blur-background-exclude = [
 ];
 
 # Fading
-# fading = true;
-# fade_delta = 1;
-# fade-in-step = 0.02;
-# fade-out-step = 0.02;
-# no-fading-open-close = true;
+#fading = true;
+#fade_delta = 1;
+#fade-in-step = 0.02;
+#fade-out-step = 0.02;
+#no-fading-open-close = true;
 
 # Opacity
 # inactive-opacity = 0.9;
 # active-opacity = 1;
 
 # Shadows
-shadow = true;
-shadow-radius = 10;
-shadow-opacity = .6;
-shadow-offset-x = -8;
-shadow-color = "#111111";
-
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+#shadow = true;
+#shadow-radius = 10;
+#shadow-opacity = .6;
+#shadow-offset-x = -8;
+#shadow-color = "#111111";
+#
+#shadow-exclude = [
+#  "name = 'Notification'",
+#  "class_g = 'Conky'",
+#  "class_g ?= 'Notify-osd'",
+#  "class_g = 'Cairo-clock'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
 #################################
 #     Animation Settings    #
