--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -16,19 +16,20 @@
 ;
 ;==========================================================
 
-[colors]
-background = #1a1b26
-background-alt = #1a1b26
-foreground = #a9b1d6
-alert = #f7768e
-black = #32344a
-green = #9ece6a
-yellow = #e0af68
-blue = #7aa2f7
-magenta = #ad8ee6
-pink = #ff007c
-cyan = #449dab
-white = #787c99
+include-file = ~/.config/polybar/rose-pine.ini
+;;[colors]
+;;background = #1a1b26
+;;background-alt = #1a1b26
+;;foreground = #a9b1d6
+;;alert = #f7768e
+;;black = #32344a
+;;green = #9ece6a
+;;yellow = #e0af68
+;;blue = #7aa2f7
+;;magenta = #ad8ee6
+;;pink = #ff007c
+;;cyan = #449dab
+;;white = #787c99
 
 [bar/bar1]
 width = 100%
@@ -53,7 +54,7 @@ padding-right = 0
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.cyan}
+separator-foreground = ${colors.secondary}
 
 font-0 = "JetBrainsMono Nerd Font:size=9;2"
 font-1 = "JetBrainsMono Nerd Font:size=9;2"
@@ -82,13 +83,13 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.black}
-label-active-foreground = ${colors.magenta}
+label-active-background = ${colors.background-alt}
+label-active-foreground = ${colors.rose}
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
-label-occupied-foreground = ${colors.blue}
+label-occupied-foreground = ${colors.iris}
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
@@ -118,7 +119,7 @@ type = internal/pulseaudio
 
 format-volume-prefix = "󰕾 "
 format-volume-foreground = ${colors.foreground}
-format-volume-prefix-foreground = ${colors.cyan}
+format-volume-prefix-foreground = ${colors.rose}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
@@ -145,7 +146,7 @@ format-prefix-foreground = ${colors.cyan}
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.gold}
 format-foreground = ${colors.foreground}
 label = %percentage_used:2%%
 
@@ -153,7 +154,7 @@ label = %percentage_used:2%%
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.green}
+format-prefix-foreground = ${colors.love}
 format-foreground = ${colors.foreground}
 label = %percentage:2%%
 
@@ -184,18 +185,18 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = %date%
 label-foreground = ${color.foreground}
 format-prefix = "󱑀 "
-format-prefix-foreground = ${colors.blue}
+format-prefix-foreground = ${colors.pine}
 
 [module/battery]
 type = internal/battery
 full-at = 95
 
 format-full-prefix = "󱟢 "
-format-full-foreground = ${colors.magenta}
+format-full-foreground = ${colors.iris}
 format-charging-prefix = "󰂉 "
-format-charging-foreground = ${colors.magenta}
+format-charging-foreground = ${colors.iris}
 format-discharging-prefix = "󰁿 "
-format-discharging-foreground = ${colors.magenta}
+format-discharging-foreground = ${colors.iris}
 
 
 [module/tray]
