--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,14 +26,22 @@ bind-key -r f run-shell "tmux neww tmux-sessionizer"
 bind-key -r H run-shell "tmux-sessionizer ~/Lections"
 bind-key -r G run-shell "tmux-sessionizer ~/projects/web-for-dc/"
 
-set -g @tokyo-night-tmux_window_id_style digital
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
+# set -g @tokyo-night-tmux_window_id_style digital
+# set -g @tokyo-night-tmux_pane_id_style hsquare
+# set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @plugin "janoamaral/tokyo-night-tmux"
+
+set -g @plugin 'rose-pine/tmux'
+set -g @rose_pine_variant 'main'
+
+set -g @rose_pine_host 'on' # Enables hostname in the status bar
+set -g @rose_pine_date_time '%I:%M' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
 
 run '~/.tmux/plugins/tpm/tpm'
