--- a/xborders/.config/xborders/config.json
+++ b/xborders/.config/xborders/config.json
@@ -1,5 +1,5 @@
 {
     "border-width":  1,
-    "border-rgba": "#bb9af7",
-    "border-radius": 12
+    "border-rgba": "#ebbcba",
+    "border-radius": 10
 }
