--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,16 +1,17 @@
 backend = "glx"
-glx-no-stencil = true;
 glx-copy-from-front = false;
 
-#vsync = true;
+vsync = true;
 
 rounded-corners = true;
-corner-radius = 10;
+corner-radius = 15;
 
 rounded-corners-exclude = [
   "class_g = 'i3-frame'",
   "class_g = 'Polybar'",
   "class_g = 'Rofi'",
+  "class_g = 'Dunst'",
+  "class_g = 'zen-alpha'",
   "name = 'Notification'",
   "window_type = 'dock'",
   "window_type = 'desktop'"
