--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -33,10 +33,10 @@ include-file = ~/.config/polybar/rose-pine.ini
 
 [bar/bar1]
 width = 100%
-height = 18pt
+height = 22pt
 radius = 0
 
-bottom = true
+bottom = false
 
 ; dpi = 96
 
@@ -44,9 +44,6 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
-
-border-size = 0pt
-border-color = ${colors.background}
 
 padding-left = 0
 padding-right = 0
@@ -56,11 +53,12 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.secondary}
 
-font-0 = "JetBrainsMono Nerd Font:size=9;2"
-font-1 = "JetBrainsMono Nerd Font:size=9;2"
+font-0 = "JetBrainsMono Nerd Font:size=10;2"
+font-1 = "JetBrainsMono Nerd Font:size=10;2"
 
-modules-left = xworkspaces
-modules-right = pulseaudio memory cpu date battery tray
+modules-left = xworkspaces xwindow
+modules-center = date 
+modules-right = pulseaudio memory cpu battery tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -83,7 +81,7 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
+label-active-background = ${colors.background}
 label-active-foreground = ${colors.rose}
 label-active-padding = 1
 
@@ -101,7 +99,8 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title%
+label-maxlen = 50
 
 [module/filesystem]
 type = internal/fs
@@ -179,12 +178,13 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %d/%m/%Y 
+time = %H:%M:%S - %a
+;; date-alt = %Y-%m-%d %H:%M:%S
 
-label = %date%
-label-foreground = ${color.foreground}
-format-prefix = "󱑀 "
+label = %time%, %date%
+label-foreground = ${colors.foreground}
+format-prefix = " "
 format-prefix-foreground = ${colors.pine}
 
 [module/battery]
