add mpd and ncmpcpp

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -29,6 +29,7 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "role = 'xborder'",
   "class_g = 'Conky'",
+  "class_g = 'slop'",
   "name = 'Notification'",
   "_GTK_FRAME_EXTENTS"
 ];
@@ -41,8 +42,8 @@ blur-background-exclude = [
 #no-fading-open-close = true;
 
 # Opacity
-# inactive-opacity = 0.9;
-# active-opacity = 1;
+#inactive-opacity = 0.9;
+#active-opacity = 1;
 
 # Shadows
 #shadow = true;
