--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -33,10 +33,10 @@ include-file = ~/.config/polybar/rose-pine.ini
 
 [bar/bar1]
 width = 100%
-height = 22pt
+height = 20pt
 radius = 0
 
-bottom = false
+bottom = true
 
 ; dpi = 96
 
@@ -53,8 +53,8 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.secondary}
 
-font-0 = "JetBrainsMono Nerd Font:size=10;2"
-font-1 = "JetBrainsMono Nerd Font:size=10;2"
+font-0 = "JetBrainsMono Nerd Font:size=9;2"
+font-1 = "JetBrainsMono Nerd Font:size=9;2"
 
 modules-left = xworkspaces xwindow
 modules-center = date 
