--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -3,8 +3,8 @@ glx-copy-from-front = false;
 
 vsync = true;
 
-rounded-corners = true;
-corner-radius = 15;
+#rounded-corners = true;
+#corner-radius = 15;
 
 rounded-corners-exclude = [
   "class_g = 'i3-frame'",
