remove ohmyzsh, add ohmyposh prompt, some small chages to another stuff

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -11,20 +11,26 @@ $mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod_Shift, Q, killactive,
+bind = $mainMod, Q, killactive,
+bind = $mainMod_Shift, Q, forcekillactive,
 bind = $mainMod_Shift, E, exit,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Move window
+bind = $mainMod_Shift, h, movewindow, l
+bind = $mainMod_Shift, l, movewindow, r
+bind = $mainMod_Shift, k, movewindow, u
+bind = $mainMod_Shift, j, movewindow, d
 
 # Switch workspaces
 bind = $mainMod, plus, workspace, 1
@@ -39,16 +45,16 @@ bind = $mainMod, bracketright, workspace, 9
 bind = $mainMod, asterisk, workspace, 10
 
 # Move active window to a workspace
-bind = $mainMod SHIFT, plus, movetoworkspace, 1
-bind = $mainMod SHIFT, bracketleft, movetoworkspace, 2
-bind = $mainMod SHIFT, braceleft, movetoworkspace, 3
-bind = $mainMod SHIFT, parenleft, movetoworkspace, 4
-bind = $mainMod SHIFT, ampersand, movetoworkspace, 5
-bind = $mainMod SHIFT, equal, movetoworkspace, 6
-bind = $mainMod SHIFT, parenright, movetoworkspace, 7
-bind = $mainMod SHIFT, braceright, movetoworkspace, 8
-bind = $mainMod SHIFT, bracketright, movetoworkspace, 9
-bind = $mainMod SHIFT, asterisk, movetoworkspace, 10
+bind = $mainMod SHIFT, plus, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, braceleft, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, parenleft, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, ampersand, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, equal, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, parenright, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, braceright, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, asterisk, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -76,5 +82,5 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# run wallpaper selector
+# Execute wallpaper selector
 bind = $mainMod, W, exec, $HOME/.config/hypr/scripts/WallpaperSelect.sh
