--- a/hypr/.config/hypr/autostart.conf
+++ b/hypr/.config/hypr/autostart.conf
@@ -11,3 +11,4 @@ exec-once = waybar &
 exec-once = swaync &
 exec-once = hyprctl setcursor BreezeX-RosePine-Linux 24
 exec-once = swww-daemon &
+exec-once = kanata -c ~/.config/kanata/config.kbd &
