--- a/hypr/.config/hypr/env.conf
+++ b/hypr/.config/hypr/env.conf
@@ -8,5 +8,7 @@ env = XCURSOR_THEME,rose-pine-cursor
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+
+# Nvidia stuff
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
