--- a/hypr/.config/hypr/settings.conf
+++ b/hypr/.config/hypr/settings.conf
@@ -2,11 +2,12 @@
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    force_split = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_status = slave # what a f is this naming?
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -32,7 +33,7 @@ input {
     kb_layout = prog-qwerty,ru
     kb_variant =
     kb_model =
-    kb_options = grp:win_space_toggle, ctrl:nocaps
+    kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
