add wlogout, hyprlock

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -84,3 +84,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Execute wallpaper selector
 bind = $mainMod, W, exec, $HOME/.config/hypr/scripts/WallpaperSelect.sh
+
+# wlogout
+bind = $mainMod_Shift, P, exec, $HOME/.config/hypr/scripts/Wlogout.sh
