add screenshot functionality to hypr and actually all wayland

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -6,6 +6,8 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = rofi -show drun -theme $HOME/.config/rofi/launcher.rasi
 
+$scriptDir = $HOME/.config/hypr/scripts/
+
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = ALT
 
@@ -83,7 +85,15 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Execute wallpaper selector
-bind = $mainMod, W, exec, $HOME/.config/hypr/scripts/WallpaperSelect.sh
+bind = $mainMod, W, exec, $scriptDir/WallpaperSelect.sh
 
 # wlogout
-bind = $mainMod_Shift, P, exec, $HOME/.config/hypr/scripts/Wlogout.sh
+bind = $mainMod_Shift, P, exec, $scriptDir/Wlogout.sh
+
+# Screenshots
+bind = , Print, exec, $scriptDir/screenshot 
+bind = SHIFT, Print, exec, $scriptDir/screenshot -r
+
+# Clipboard screenshots
+bind = CTRL, Print, exec, $scriptDir/screenshot -c
+bind = CTRL SHIFT, Print, exec, $scriptDir/screenshot -cr
