cleaning my home directory

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -19,6 +19,7 @@ bind = $mainMod_Shift, E, exit,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod_Shift, V, togglesplit
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 
@@ -103,10 +104,12 @@ bind = $mainMod_Shift, P, exec, $scriptDir/Wlogout.sh
 # Screenshots
 bind = , Print, exec, $scriptDir/screenshot 
 bind = SHIFT, Print, exec, $scriptDir/screenshot -r
+bind = $mainMod, Print, exec, $scriptDir/screenshot -w
 
 # Clipboard screenshots
 bind = CTRL, Print, exec, $scriptDir/screenshot -c
 bind = CTRL SHIFT, Print, exec, $scriptDir/screenshot -cr
+bind = CTRL $mainMod, Print, exec, $scriptDir/screenshot -wc
 
 # toggle pretty stuff
 bind = WIN, F1, exec, $scriptDir/toggleDecorations
