--- a/hypr/.config/hypr/env.conf
+++ b/hypr/.config/hypr/env.conf
@@ -9,6 +9,10 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
+env = QT_QPA_PLATFORMTHEME,kde
+env = QT_QPA_PLATFORM,wayland
+env = XDG_MENU_PREFIX,plasma-
+
 # Nvidia stuff
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
